# pypixl

./: .gitignore  CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
